@@ -4,8 +4,9 @@ Version=1.0
 Type=Application
 Terminal=false
 Name=Ionic
-Exec=/usr/bin/single-instance /opt/ionic/bin/ionic
+Exec=/usr/bin/single-instance /opt/ionic/bin/ionic %U
 Icon=/usr/share/icons/hicolor/80x80/apps/ionic80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
+MimeType=application/epub+zip;
