@@ -5,22 +5,19 @@
 #include <QDebug>
 
 /** Generic XML error handler. */
-class XmlErrorHandler: public QXmlErrorHandler
-{
+class XmlErrorHandler: public QXmlErrorHandler {
     bool error(const QXmlParseException &e) {
-        qCritical() << "*** XmlErrorHandler::error" << e.message() << "at line"
-                << e.lineNumber();
+        qCritical() << "XmlErrorHandler::error" << e.message() << "at line" << e.lineNumber();
         return true;
     }
     QString errorString() const {return QString();}
     bool fatalError(const QXmlParseException &e) {
-        qCritical() << "*** XmlErrorHandler::fatalError" << e.message()
+        qCritical() << "XmlErrorHandler::fatalError" << e.message()
                 << "at line" <<  e.lineNumber();
         return true;
     }
     bool warning(const QXmlParseException &e) {
-        qWarning() << "XmlErrorHandler::warning" << e.message() << "at line"
-                << e.lineNumber();
+        qWarning() << "XmlErrorHandler::warning" << e.message() << "at line" << e.lineNumber();
         return true;
     }
 };
