@@ -5,10 +5,11 @@ Copyright &copy; 2009-2011 by Akos Polster. All rights reserved.
 Many sites provide e-books in EPUB format, without DRM protection. Some of my favorites are:
 <p>
 <ul>
-<li><a href="http://www.gutenberg.org/">Project Gutenberg</a>
+<li><a href="http://m.gutenberg.org/">Project Gutenberg</a>
 <li><a href="http://www.epubbooks.com/">epubBooks.com</a>
 <li><a href="http://shop.oreilly.com/category/ebooks.do">O'Reilly</a>
 <li><a href="http://www.penguin.co.uk/static/cs/uk/0/epenguin/">Penguin Books</a>
+<li><a href="http://www.kobo.com/">Kobo</a>
 </ul>
 <p>
 <b>How to add books to Ionic?</b>
